--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -7,10 +7,12 @@ on:
   pull_request:
 
 jobs:
+  # =================================================================
+  # ==                  BACKEND MODULE WORKFLOW                    ==
+  # =================================================================
   plan-backend:
     name: 'Plan: 00-backend'
     runs-on: ubuntu-latest
-    # This job only runs if changes were made in the 00-backend directory
     if: |
       github.event_name == 'pull_request' ||
       (github.event_name == 'push' && contains(join(github.event.commits.*.modified, ' '), 'modules/00-backend/'))
@@ -45,18 +47,20 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -out=tfplan -input=false -no-color
 
-      - name: Upload Plan Artifacts
+      - name: Upload Plan and State Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: backend-artifacts
-          path: ./modules/00-backend/tfplan
+          path: |
+            ./modules/00-backend/tfplan
+            ./modules/00-backend/terraform.tfstate
 
   apply-backend:
     name: 'Apply: 00-backend'
     runs-on: ubuntu-latest
     needs: plan-backend
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    environment: production  # Enable this after creating the environment in GitHub
+    environment: production
 
     defaults:
       run:
@@ -77,7 +81,78 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: backend-artifacts
-          path: ./modules/00-backend/
+          path: ./modules/00-backend
+      - name: Terraform Init
+        run: terraform init
+      - name: Terraform Apply
+        run: terraform apply -auto-approve tfplan
+
+  # =================================================================
+  # ==                EC2 INSTANCE MODULE WORKFLOW                 ==
+  # =================================================================
+  plan-ec2:
+    name: 'Plan: 01-ec2-instance'
+    runs-on: ubuntu-latest
+    if: |
+      github.event_name == 'pull_request' ||
+      (github.event_name == 'push' && contains(join(github.event.commits.*.modified, ' '), 'modules/01-ec2-instance/'))
+
+    defaults:
+      run:
+        working-directory: ./modules/01-ec2-instance
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1
+      - name: Terraform Format Check
+        run: terraform fmt -check -recursive
+      - name: Terraform Init
+        run: terraform init
+      - name: Terraform Validate
+        run: terraform validate
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan -input=false -no-color
+      - name: Upload Plan Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ec2-plan
+          path: ./modules/01-ec2-instance/tfplan
+
+  apply-ec2:
+    name: 'Apply: 01-ec2-instance'
+    runs-on: ubuntu-latest
+    needs: plan-ec2
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    environment: production
+
+    defaults:
+      run:
+        working-directory: ./modules/01-ec2-instance
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1
+      - name: Download Plan Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ec2-plan
+          path: ./modules/01-ec2-instance
       - name: Terraform Init
         run: terraform init
       - name: Terraform Apply
