--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -24,29 +24,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
-
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
-
       - name: Terraform Format Check
         run: terraform fmt -check -recursive
-
       - name: Terraform Init
         run: terraform init
-
       - name: Terraform Validate
         run: terraform validate
-
       - name: Terraform Plan
         run: terraform plan -out=tfplan -input=false -no-color
-
       - name: Upload Plan and State Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -61,11 +54,9 @@ jobs:
     needs: plan-backend
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     environment: production
-
     defaults:
       run:
         working-directory: ./modules/00-backend
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -96,11 +87,9 @@ jobs:
     if: |
       github.event_name == 'pull_request' ||
       (github.event_name == 'push' && contains(join(github.event.commits.*.modified, ' '), 'modules/01-ec2-instance/'))
-
     defaults:
       run:
         working-directory: ./modules/01-ec2-instance
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -132,11 +121,9 @@ jobs:
     needs: plan-ec2
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     environment: production
-
     defaults:
       run:
         working-directory: ./modules/01-ec2-instance
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -153,6 +140,73 @@ jobs:
         with:
           name: ec2-plan
           path: ./modules/01-ec2-instance
+      - name: Terraform Init
+        run: terraform init
+      - name: Terraform Apply
+        run: terraform apply -auto-approve tfplan
+
+  # =================================================================
+  # ==                     VPC MODULE WORKFLOW                     ==
+  # =================================================================
+  plan-vpc:
+    name: 'Plan: 02-vpc'
+    runs-on: ubuntu-latest
+    if: |
+      github.event_name == 'pull_request' ||
+      (github.event_name == 'push' && contains(join(github.event.commits.*.modified, ' '), 'modules/02-vpc/'))
+    defaults:
+      run:
+        working-directory: ./modules/02-vpc
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1
+      - name: Terraform Format Check
+        run: terraform fmt -check -recursive
+      - name: Terraform Init
+        run: terraform init
+      - name: Terraform Validate
+        run: terraform validate
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan -input=false -no-color
+      - name: Upload Plan Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: vpc-plan
+          path: ./modules/02-vpc/tfplan
+
+  apply-vpc:
+    name: 'Apply: 02-vpc'
+    runs-on: ubuntu-latest
+    needs: plan-vpc
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    environment: production
+    defaults:
+      run:
+        working-directory: ./modules/02-vpc
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1
+      - name: Download Plan Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: vpc-plan
+          path: ./modules/02-vpc
       - name: Terraform Init
         run: terraform init
       - name: Terraform Apply
