--- a/.github/workflows/terraform-ci.yml
+++ b/.github/workflows/terraform-ci.yml
@@ -211,3 +211,70 @@ jobs:
         run: terraform init
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
+
+  # =================================================================
+  # ==                   S3 BUCKET MODULE WORKFLOW                 ==
+  # =================================================================
+  plan-s3:
+    name: 'Plan: 03-s3-bucket'
+    runs-on: ubuntu-latest
+    if: |
+      github.event_name == 'pull_request' ||
+      (github.event_name == 'push' && contains(join(github.event.commits.*.modified, ' '), 'modules/03-s3-bucket/'))
+    defaults:
+      run:
+        working-directory: ./modules/03-s3-bucket
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1
+      - name: Terraform Format Check
+        run: terraform fmt -check -recursive
+      - name: Terraform Init
+        run: terraform init
+      - name: Terraform Validate
+        run: terraform validate
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan -input=false -no-color
+      - name: Upload Plan Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: s3-plan
+          path: ./modules/03-s3-bucket/tfplan
+
+  apply-s3:
+    name: 'Apply: 03-s3-bucket'
+    runs-on: ubuntu-latest
+    needs: plan-s3
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    environment: production
+    defaults:
+      run:
+        working-directory: ./modules/03-s3-bucket
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1
+      - name: Download Plan Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: s3-plan
+          path: ./modules/03-s3-bucket
+      - name: Terraform Init
+        run: terraform init
+      - name: Terraform Apply
+        run: terraform apply -auto-approve tfplan
